--- a/Frontend/src/Components/SignIn/SignIn.css
+++ b/Frontend/src/Components/SignIn/SignIn.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 #navbar{
     background-color:black;
     
@@ -29,4 +31,42 @@ li{
     margin-top:300px;
     clear: both;
     text-align:center;
+    
+}
+#mainlogo{
+    width:300px;
+    
+}
+
+#signinform{
+    background-color: white;
+    border-radius: 25px;
+    border: 2px solid #E3F600;
+    width:400px;
+    height:500px;
+    margin:auto;
+    text-align:left;    
+    padding:50px;
+}
+#header{
+    text-align:center;
+    font-size: 30px !important;
+    font-family: 'Roboto', sans-serif !important; 
+}
+
+#signinform input{
+    height:30px;
+    width:100%;
+    
+}
+
+#submitbutton{
+    height: 30px;
+    width:100%;
+    background-color:#E3F600;
+    margin-top:30px;
+}
+
+.errormsg{
+    color:red;
 }
