--- a/Frontend/src/Components/Discover/Discover.css
+++ b/Frontend/src/Components/Discover/Discover.css
@@ -15,6 +15,8 @@ li{
     float:right;
     margin-right:30px;
     cursor:pointer;
+    padding-top: 10px;
+    
 }
 
 #logo_li{
@@ -30,25 +32,60 @@ li{
     display:block;
     clear:both;
     text-align:center;
+    
     /* background-color: blanchedalmond; */
+    
 }
 
-#header{
+#discoverheader{
     font-family: 'Sacramento', cursive;
-    font-size:70px;
-    padding:20px;
-    margin:0;
+    font-size:50px;
+    padding-bottom: 5px !important;
+    margin:0 !important;
 }
 
 #profile{
+    position:relative;
     background-color: white;
     margin:auto;
     width:450px;
     height:500px;
     border-radius: 25px;
     border: 2px solid #E3F600;
+    box-shadow:0px 18px 53px 0px rgba(0,0,0,0.3);
+    
 }
 
-#yesnoicons{
-    font-size:100px;
+#allcards{
+    display:flex;
+    justify-content:center;
+    
+}
+
+.swipe{
+    position:absolute;
+}
+
+.swipebuttons{
+    
+    display:flex;
+    
+    
+}
+.swipebuttons .MuiIconButton-root{
+    background-color: white;
+    box-shadow:0px 18px 53px 0px rgba(0,0,0,0.3)!important;
+    padding:2vh;
+}
+#nobutton{
+    color:#ec5e6f !important;
+    position:fixed;
+    bottom:5vh;
+    left: 25%;
+}
+#yesbutton{
+    color:#76e2b3 !important;
+    position:fixed;
+    bottom:5vh;
+    left: 70%;
 }
